@@ -1,3 +1,4 @@
+2023/03/18 Reworked /speed command
 2023/03/16 Reworked /idlist and added language support
 2023/02/21 Added set effect chart
 2023/02/01 Added enhance cost chart
